@@ -2,13 +2,12 @@
 #
 # Check for perlcritic errors in all code.
 #
-# Checks all Perl code in blib/lib, t, and Makefile.PL for problems uncovered
-# by perlcritic.  This test is disabled unless RRA_MAINTAINER_TESTS is set,
-# since coding style will not interfere with functionality and newer versions
-# of perlcritic may introduce new checks.
+# If author tests are enabled, check all Perl code in blib/lib, examples, usr,
+# t, and Build.PL for problems uncovered by perlcritic, ignoring template
+# files, junk, and any files explicitly configured to be ignored.
 #
 # Written by Russ Allbery <eagle@eyrie.org>
-# Copyright 2013
+# Copyright 2013, 2014
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
@@ -36,11 +35,12 @@ use warnings;
 use lib 't/lib';
 
 use Test::More;
-use Test::RRA qw(skip_unless_maintainer use_prereq);
+use Test::RRA qw(skip_unless_author use_prereq);
 use Test::RRA::Config qw(@CRITIC_IGNORE);
 
-# Skip tests unless we're running the test suite in maintainer mode.
-skip_unless_maintainer('Coding style tests');
+# Skip tests unless we're running author tests since this test is too
+# sensitive to the exact version of Perl::Critic to be generally useful.
+skip_unless_author('Coding style tests');
 
 # Load prerequisite modules.
 use_prereq('Perl::Critic::Utils');
@@ -81,3 +81,7 @@ plan tests => scalar @files;
 for my $file (@files) {
     critic_ok($file);
 }
+
+# On Debian with perltidy 20130922-1, a perltidy.LOG file gets left behind in
+# the current directory.  Remove it if it exists.
+unlink('perltidy.LOG');
